# HOGA

./: .gitignore  README.md  environment.yml  first_task_instructions.md  pyproject.toml  requirements.txt  run.sh  task_instructions.md
.cursor/rules/: conda-environment.mdc
scripts/: demo_mig_parser.py  train.py
src/: __init__.py
src/data/: __init__.py  dataset_generator.py  dataset_pyg.py  evaluate.py  make_master_file.py
src/data/io/: __init__.py  mig_parser.py  mig_to_pyg.py  read_graph_pyg.py
src/evaluation/: __init__.py
src/models/: __init__.py  hoga.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  logger.py  preprocess.py
